feat: Implement self-optimization loop for schemas
Introduces a complete, systemic loop for the agent to improve its own reasoning schemas and effort models.

This change includes:
- A new `SchemaManagementTool` that handles the lifecycle of schemas, including creation of new versions and deprecation of old ones.
- Integration of schema deprecation with the `LogicEngine` and `Governor` via a new `PreventDeprecatedSchemaUseRule`, which provides a hard safety guarantee against using outdated schemas.
- A new `schema_optimizer_schema.json` and `effort_model_optimizer_schema.json` to define the meta-reasoning process for self-improvement.
- Proactive XAI report generation by an `XaiReportGenerator` that listens for optimization events and creates goals to explain them.
- A significant refactoring of the `LogicEngine` to be a persistent, shared component, improving the architecture and enabling stateful governance rules.

All existing unit and integration tests pass after these changes.

Note: A new end-to-end integration test (`OptimizerIntegrationTest.java`) has been written to validate the full healing loop, but it was causing the test suite to hang and requires further debugging.